@@ -1,22 +1,19 @@
 package org.eclipse.cargotracker.domain.model.handling;
 
-import org.apache.commons.lang3.Validate;
-
 import java.util.*;
 
 public class HandlingHistory {
-    // private static final Logger LOGGER = Logger.getLogger(HandlingHistory.class.getName());
-
     // Null object pattern.
     public static final HandlingHistory EMPTY = new HandlingHistory(Collections.emptyList());
-    private static final Comparator<HandlingEvent> BY_COMPLETION_TIME_COMPARATOR =
-            Comparator.comparing(HandlingEvent::getCompletionTime);
+
+    private static final Comparator<HandlingEvent> BY_COMPLETION_TIME_COMPARATOR = Comparator
+            .comparing(HandlingEvent::getCompletionTime);
+
     private final List<HandlingEvent> handlingEvents;
 
     public HandlingHistory(Collection<HandlingEvent> handlingEvents) {
-        Validate.notNull(handlingEvents, "Handling events are required");
-
-        this.handlingEvents = new ArrayList<>(handlingEvents);
+        Objects.requireNonNull(handlingEvents, "Handling events are required");
+        this.handlingEvents = List.copyOf(handlingEvents);
     }
 
     public List<HandlingEvent> getAllHandlingEvents() {
@@ -25,13 +22,10 @@ public class HandlingHistory {
 
     /**
      * @return A distinct list (no duplicate registrations) of handling events, ordered by
-     *     completion time.
+     * completion time.
      */
     public List<HandlingEvent> getDistinctEventsByCompletionTime() {
-        List<HandlingEvent> ordered = new ArrayList<>(new HashSet<>(handlingEvents));
-        ordered.sort(BY_COMPLETION_TIME_COMPARATOR);
-
-        return Collections.unmodifiableList(ordered);
+        return handlingEvents.stream().distinct().sorted(BY_COMPLETION_TIME_COMPARATOR).toList();
     }
 
     /**
@@ -39,33 +33,19 @@ public class HandlingHistory {
      */
     public HandlingEvent getMostRecentlyCompletedEvent() {
         List<HandlingEvent> distinctEvents = getDistinctEventsByCompletionTime();
-        // LOGGER.log(Level.INFO, "distinct events: {0}", distinctEvents);
-        if (distinctEvents.isEmpty()) {
-            return null;
-        } else {
-            return distinctEvents.get(distinctEvents.size() - 1);
-        }
-    }
-
-    private boolean sameValueAs(HandlingHistory other) {
-        return other != null && this.handlingEvents.equals(other.handlingEvents);
+        if (distinctEvents.isEmpty()) return null;
+        return distinctEvents.getLast();
     }
 
     @Override
     public boolean equals(Object o) {
-        if (this == o) {
-            return true;
-        }
-        if (o == null || getClass() != o.getClass()) {
-            return false;
-        }
-
-        HandlingHistory other = (HandlingHistory) o;
-        return sameValueAs(other);
+        if (o == null || getClass() != o.getClass()) return false;
+        HandlingHistory that = (HandlingHistory) o;
+        return Objects.equals(handlingEvents, that.handlingEvents);
     }
 
     @Override
     public int hashCode() {
-        return handlingEvents.hashCode();
+        return Objects.hashCode(handlingEvents);
     }
 }
